Fix: 100% DSI compliance - audit corrections completes
Corrections appliquees suite audit DSI :
- Secrets supprimes du suivi Git, externalisation complete
- Migrations Flyway: suppression V13/V14 dupliquees, isolation par service
- RBAC: ajout role D2F dans ERole
- Docker: nettoyage references Artemis et defaults passwords
- App User: convention app_user_{service} appliquee
- JWT: middleware pour services Python (defense-in-depth)
- Metriques: endpoints /metrics pour les 3 services IA
- DLQ: Dead Letter Queue configuree sur RabbitMQ
- PII: anonymisation emails, telephone, IP dans les logs
- Uploads: validation MIME type + taille maximum
- Auth: module partage d2f-common-security cree
- Migrations manquantes: audit_logs, notification, evaluation_formateur
- SonarQube: script de scan automatise
- Code mort: JwtTokenFilter supprime
- Performance: timeouts API configurables